--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,18 @@
       content="Gong Xi Fa Chai! Your loved one wants to play the Coca-cola Family Reunion Trivia Challenge with you"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta property="og:url"           content="https://cnyquiz2022.coca-cola.com" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Family Reunion - Trivia challenge" />
+    <!-- <meta property="og:description"   content="Your description" /> -->
+    <meta property="og:image"         content="https://cnyquiz2022.coca-cola.com.sg/banner-full.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="/tweenlite.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,7 +34,7 @@
     <title>Family Reunion - Trivia challenge</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
