--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Gong Xi Fa Chai! Your loved one wants to play the Coca-cola Family Reunion Trivia Challenge with you"
+      content="Gong Xi Fa Chai! Your loved one wants to play the Coca-Cola Family Reunion Trivia Challenge with you"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta property="og:url"           content="https://cnyquiz2022.coca-cola.com" />
