site preview image

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Family Reunion - Trivia challenge" />
     <!-- <meta property="og:description"   content="Your description" /> -->
-    <meta property="og:image"         content="https://cnyquiz2022.coca-cola.com.sg/banner-full.png" />
+    <meta property="og:image"         content="https://ar-filter-demo.netfliy.app/banner-full.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
