site preview image added

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Gong Xi Fa Chai! Your loved one wants to play the Coca-Cola Family Reunion Trivia Challenge with you"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta property="og:url"           content="https://cnyquiz2022.coca-cola.com" />
+    <meta property="og:url"           content="https://ar-filter-demo.netfliy.app" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Family Reunion - Trivia challenge" />
     <!-- <meta property="og:description"   content="Your description" /> -->
